# mini-starknet-indexer-rs

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT_ENDPOINTS.md  README.md  deployment_examples.md
client/: README.md  package.json  pnpm-lock.yaml
client/src/app/: layout.tsx  page.tsx  starknet-provider.tsx
client/src/app/deployment-demo/: page.tsx
client/src/app/deployment/[address]/: page.tsx
client/src/app/deployments/: page.tsx
client/src/app/pricing/: page.tsx
client/src/components/: ApiKeyManager.tsx  DeploymentContractManager.tsx  DeploymentSelector.tsx  PaymentModal.tsx
client/src/hooks/: useDeploymentClient.ts  useTokenPayment.ts
client/src/lib/: apollo-client.ts  cpu-pricing-api.ts  deployment-client.ts
client/src/lib/graphql/: queries.ts
client/src/types/: graphql.ts
contracts/: Scarb.toml  auto_deploy_mainnet_clean.sh  snfoundry.toml
contracts/src/: lib.cairo
examples/: advanced_indexing.md  allow_list_demo.sh  allow_list_usage.md
src/: api_key_service.rs  auth_middleware.rs  billing.rs  billing_context.rs  database.rs  deployment_service.rs  deployment_service_handler.rs  indexer.rs  main.rs  realtime.rs  starknet.rs
src/graphql/: deployment_context.rs  deployment_schema.rs  mod.rs  schema.rs  types.rs
src/graphql/resolvers/: api_keys.rs  billing.rs  contracts.rs  deployment_contracts.rs  deployment_events.rs  deployments.rs  events.rs  mod.rs  subscriptions.rs
