[package]
name = "mini-starknet-indexer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
async-graphql = "7"
async-graphql-axum = "7"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4.5", features = ["derive"] }
url = "2"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "migrate", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.21"
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"
sha2 = "0.10"
base64 = "0.21"